[package]
name = "h3o_polars_ext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
polars-core = { version = "0.30" }
polars-lazy =  "*"
polars = { version = "*", features = ["fmt"] }
rayon = "1.6"
pyo3-polars = { version = "0.4.1", features = ["lazy"] }
h3o = "0.3.2"
arrow = "43.0.0"
arrow-array = "43.0.0"
