[tool.poetry]
name = "h3o_polars_ext"
version = "0.1.0"
description = "Add h3o polars extenstions"
license = "MIT"
authors = ["Sean Lane <git@sean.lane.sh>"]
readme = "README.md"
packages = [{include = "h3o_polars_ext"}]

[tool.poetry.dependencies]
python = "^3.10"
pyarrow = "^12.0.1"
polars = "^0.18.7"

[tool.poetry.group.dev.dependencies]
maturin = "^1.1.0"
pytest = "^7.4.0"
pytest-benchmark = "^4.0.0"

[tool.maturin]
include = ["LICENSE", "README.md"]
bindings = "pyo3"
compatibility = "manylinux2014"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "h3o_polars_ext"
version = "0.1.0"
description = "Add h3o polars extenstions"
authors = [{name = "Sean Lane"}]
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    'Development Status :: 3 - Alpha',
    "Programming Language :: Rust",
    'Programming Language :: Python',
    'License :: OSI Approved :: MIT License',
]

[project.urls]
homepage = "https://github.com/neiybor/h3o_polars_ext"
repository = "https://github.com/neiybor/h3o_polars_ext"